# rescue-robot

./: .gitignore  README.md  requirements.txt  ros_source.bash
docs/: README.md  dry_test_manual.md
src/camera_system/: requirements.txt
src/rescue_bot/: package.xml  setup.py
src/robot5_person_search/: package.xml  setup.py
